Small screen boxes fix for light mode dark mode toggle

--- a/src/index.css
+++ b/src/index.css
@@ -390,6 +390,16 @@ body.dark {
 	.custom-box + h5 {
 		font-size: 16px;
 	}
+
+	.custom-box {
+		width: 12px;
+		height: 12px;
+	}
+
+	.baseline {
+	gap: 2px;
+}
+
 }
 /** LIGHT DARK TOGGLE FINISH **/
 
